--- a/numpy_matplotlib_sklearn.ipynb
+++ b/numpy_matplotlib_sklearn.ipynb
@@ -201,11 +201,10 @@
     "# TODO:use logistic regression\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn import metrics\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "lr = LogisticRegression()\n",
+    "lr = lr.fit(X_train, Y_train)\n",
+    "train_accuracy = lr.score(X_train, Y_train)\n",
+    "test_accuracy = lr.score(X_test, Y_test)\n",
     "print('Training accuracy: %0.2f%%' % (train_accuracy*100))\n",
     "print('Testing accuracy: %0.2f%%' % (test_accuracy*100))"
    ]
@@ -226,11 +225,10 @@
    "source": [
     "# TODO:use naive bayes\n",
     "from sklearn.naive_bayes import BernoulliNB\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "bn = BernoulliNB()\n",
+    "bn = bn.fit(X_train, Y_train)\n",
+    "train_accuracy = bn.score(X_train, Y_train)\n",
+    "test_accuracy = bn.score(X_test, Y_test)\n",
     "print('Training accuracy: %0.2f%%' % (train_accuracy*100))\n",
     "print('Testing accuracy: %0.2f%%' % (test_accuracy*100))"
    ]
@@ -251,11 +249,10 @@
    "source": [
     "# TODO:use support vector machine\n",
     "from sklearn.svm import LinearSVC\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "svc = LinearSVC()\n",
+    "svc = svc.fit(X_train, Y_train)\n",
+    "train_accuracy = svc.score(X_train, Y_train)\n",
+    "test_accuracy = svc.score(X_test, Y_test)\n",
     "print('Training accuracy: %0.2f%%' % (train_accuracy*100))\n",
     "print('Testing accuracy: %0.2f%%' % (test_accuracy*100))"
    ]
@@ -275,11 +272,16 @@
    "outputs": [],
    "source": [
     "# TODO:use SVM with another group of parameters\n",
-    "???\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "test_accuracy = 0\n",
+    "train_accuracy = 0\n",
+    "for par in range(1, 10):\n",
+    "\tsvc = LinearSVC(C=par/10)\n",
+    "\tsvc = svc.fit(X_train, Y_train)\n",
+    "\tnow_train_accuracy = svc.score(X_train, Y_train)\n",
+    "\tnow_test_accuracy = svc.score(X_test, Y_test)\n",
+    "\tif now_test_accuracy > test_accuracy:\n",
+    "\t\ttest_accuracy = now_test_accuracy\n",
+    "\t\ttrain_accuracy = now_train_accuracy\n",
     "print('Training accuracy: %0.2f%%' % (train_accuracy*100))\n",
     "print('Testing accuracy: %0.2f%%' % (test_accuracy*100))"
    ]
