--- a/keras.ipynb
+++ b/keras.ipynb
@@ -81,15 +81,17 @@
    "source": [
     "# define the model\n",
     "model = Sequential()\n",
-    "model.add(...)\n",
-    "model.add(...)\n",
-    "...\n",
-    "...\n",
-    "...\n",
-    "model.add(...)\n",
-    "\n",
+    "model.add(Conv2D(filters=16, kernel_size=(5, 5), padding='same', input_shape=(28, 28, 1), activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model.add(Conv2D(filters=36, kernel_size=(5, 5), padding='same', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(128, activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(10, activation='softmax'))\n",
     "# define the object function, optimizer and metrics\n",
-    "model.compile(...)"
+    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
    ]
   },
   {
@@ -108,13 +110,12 @@
    "outputs": [],
    "source": [
     "# train\n",
-    "model.fit(...)\n",
-    "\n",
+    "model.fit(x_train, y_train, epochs=NUM_EPOCHS, batch_size=BATCH_SIZE)\n",
     "# evaluate\n",
-    "score_train = \n",
-    "print('Training loss: %.4f, Training accuracy: %.2f%%' % (...))\n",
-    "score_test = \n",
-    "print('Testing loss: %.4f, Testing accuracy: %.2f%%' % (...))"
+    "score_train = model.evaluate(x_train, y_train)\n",
+    "print('Training loss: %.4f, Training accuracy: %.2f%%' % (score_train[0], score_train[1]))\n",
+    "score_test = model.evaluate(x_test, y_test)\n",
+    "print('Testing loss: %.4f, Testing accuracy: %.2f%%' % (score_test[0], score_test[1]))"
    ]
   },
   {
