--- a/keras.ipynb
+++ b/keras.ipynb
@@ -113,9 +113,9 @@
     "model.fit(x_train, y_train, epochs=NUM_EPOCHS, batch_size=BATCH_SIZE)\n",
     "# evaluate\n",
     "score_train = model.evaluate(x_train, y_train)\n",
-    "print('Training loss: %.4f, Training accuracy: %.2f%%' % (score_train[0], score_train[1]))\n",
+    "print('Training loss: %.4f, Training accuracy: %.2f%%' % (score_train[0]*100, score_train[1]*100))\n",
     "score_test = model.evaluate(x_test, y_test)\n",
-    "print('Testing loss: %.4f, Testing accuracy: %.2f%%' % (score_test[0], score_test[1]))"
+    "print('Testing loss: %.4f, Testing accuracy: %.2f%%' % (score_test[0]*100, score_test[1]*100))"
    ]
   },
   {
